# realm-template

./: .gitignore  Cargo.toml  LICENSE  README.md  auto.sh  build.rs  dodo.py  package-lock.json  package.json  realm.gsub  requirements.in  requirements.txt  shell.nix
dj/: utils.py
dj/proj/: settings.py  wsgi.py
dj/teja/: models.py
dj/teja/migrations/: 0001_initial.py
foo_bl/: Cargo.toml
foo_bl/src/: lib.rs  log_user_in.rs  prelude.rs  register_user.rs  schema.rs  validators.rs
frontend/: Actions.elm  Requests.elm  Routes.elm  Storybook.elm  Test.elm  Types.elm  elm.json
frontend/Pages/: Api.elm  Index.elm  IndexTest.elm  Login.elm  LoginTest.elm  Message.elm  NotFound.elm  Register.elm
frontend/Widgets/: Base.elm  BaseTest.elm
scripts/: 80.sh  clippy.sh  django-check.sh  migrate.sh
src/: api.rs  forward.rs  lib.rs  main.rs  pages.rs  prelude.rs  reverse.rs
src/routes/: iframe.rs  index.rs  login.rs  logout.rs  mod.rs  register.rs  storybook.rs  test.rs
src/routes/api/: is_name_available.rs  mod.rs
src/widgets/: base.rs  mod.rs
