[package]
name = "foo"
version = "0.1.0"
authors = ["amitu"]
edition = "2018"
build = "build.rs"

[workspace]
members = [
    "foo_bl",
]

[dependencies]
tokio-core = "0.1.17"
hyper = "0.12.33"
futures = "0.1.28"
reqwest = "0.9.19"
serde_derive = "1.0.99"
serde = "1.0.99"
serde_json = "1.0.40"
realm = "0.1.12"
realm_macros = "0.1.0"
failure = "~0.1.1"
http = "0.1.17"
foo_bl = {path = "foo_bl"}
diesel = { version = "1.4.2", features = ["postgres", "chrono"] }
